[package]
name = "librash"
version = "0.1.0"
description = "Rust system library for cryptographic hashes"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/librash"
edition = "2024"

[features]
capi = []

[dependencies]
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"

[package.metadata.capi.header]
name = "hash"

[package.metadata.capi.install.include]
asset = [{from="compat/*.h", to="librash"}]

[package.metadata.capi.library]
name = "rash"
#version_suffix_components = 3
rustflags = ["-Cpanic=abort"]

[package.metadata.capi.pkg_config]
name = "librash"
filename = "librash"
